# voiceprint-sdk

./: .gitignore  CMakeLists.txt  README.md  package_sdk.ps1  run_all_tests.ps1
cmake/: download_deps.cmake  download_models.cmake
doc/: DEVELOPMENT.md  SDK_README.md  usage_scenarios.md
examples/cpp_demo/: main.cpp
examples/csharp_demo/: Program.cs
include/voiceprint/: voiceprint_api.h  voiceprint_types.h
reports/: README.md
src/api/: voiceprint_dll.cpp
src/core/: audio_processor.cpp  audio_processor.h  clustering.h  embedding_extractor.cpp  embedding_extractor.h  fbank_extractor.cpp  fbank_extractor.h  loudness.h  onnx_model.cpp  onnx_model.h  pitch_analyzer.h  similarity.cpp  similarity.h  vad.cpp  vad.h  voice_analyzer.cpp  voice_analyzer.h
src/manager/: diarizer.cpp  diarizer.h  speaker_manager.cpp  speaker_manager.h
src/storage/: speaker_profile.h  sqlite_store.cpp  sqlite_store.h
src/utils/: error_codes.h  logger.cpp  logger.h
testdata/: README.md  download_testdata.ps1
tests/api_test/: api_test_main.cpp
tests/benchmark/: benchmark_main.cpp
tests/evaluation/: evaluation_main.cpp
tests/integration/: test_integration.cpp  test_voice_analysis_api.cpp
tests/unit/: test_audio_processor.cpp  test_similarity.cpp  test_sqlite_store.cpp  test_voice_analysis.cpp
